# Paper-COVID-MLTriage-CR2021

./: .gitignore  README.md  a_data_clean.ipynb  a_data_clean.py  b_model_fit_h2o.ipynb  b_model_fit_h2o_without_bubble.ipynb  c_strategies.ipynb  d_plots_and_tables.ipynb  f_plots_and_tables.ipynb  pyproject.toml  sensitivity.ipynb
.ipynb_checkpoints/: a_data_clean-checkpoint.ipynb
.virtual_documents/: a_data_clean.ipynb
data/: 2021_ACTUALIDADES_DATOS.sav  df_strategy_1.pkl  df_strategy_2.pkl  df_strategy_2_100_125_150.pkl  df_strategy_3.pkl  df_strategy_3_100_100_100.pkl  df_strategy_3_100_125_150.pkl  df_strategy_3_100_150_125.pkl  df_strategy_3_100_50_75.pkl  df_strategy_3_100_75_50.pkl  df_strategy_4.pkl  df_strategy_4_100_100_100.pkl  df_strategy_4_100_125_150.pkl  df_strategy_4_100_150_125.pkl  df_strategy_4_100_50_75.pkl  df_strategy_4_100_75_50.pkl  df_survey.pkl  model_parameters.pkl  model_parameters_2025-02-25-v0-1000-models.pkl  model_parameters_2025-02-25-v0.pkl  model_parameters_wo_bubble_2025-02-25-v0-1000-models.pkl
models/: aml_leader_model  aml_leader_model_2025-02-25-v0  aml_leader_model_2025-02-25-v0-10-models  aml_leader_model_2025-02-25-v0-1000-models  aml_leader_model_details  aml_leader_model_details_2025-02-25-v0  aml_leader_model_details_2025-02-25-v0-10-models  aml_leader_model_details_2025-02-25-v0-1000-models  aml_leader_model_details_wo_bubble_2025-02-25-v0-1000-models  aml_leader_model_wo_bubble_2025-02-25-v0-1000-models
