[project]
name = "paper-covid-mltriage-cr2021"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h2o>=3.46.0.6",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.5",
    "matplotlib>=3.10.0",
    "numpy<2",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "pingouin>=0.5.5",
    "prettytable>=3.14.0",
    "pyreadstat>=1.2.8",
    "skimpy>=0.0.15",
]
